cmake_minimum_required(VERSION 2.8.11)
project (trico)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/lib")
set(CMAKE_PDB_OUTPUT_DIRECTORY     "${CMAKE_CURRENT_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(TRICO_VECTOR_INTRINSICS "sse2" CACHE STRING  "Choose vector intrinsics: none, sse2")
set_property(CACHE TRICO_VECTOR_INTRINSICS PROPERTY STRINGS none sse2)
message(STATUS "TRICO_VECTOR_INTRINSICS='${TRICO_VECTOR_INTRINSICS}'")

add_subdirectory(lz4)
add_subdirectory(trico)
add_subdirectory(trico.tests)
add_subdirectory(zlib)


